项目架构，和简单的用户注册和登陆2。

--- a/meeting-manager/meeting-manager-controller/pom.xml
+++ b/meeting-manager/meeting-manager-controller/pom.xml
@@ -20,6 +20,11 @@
             <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.meeting</groupId>
+            <artifactId>meeting-manager-service</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
