--- a/meeting-manager/pom.xml
+++ b/meeting-manager/pom.xml
@@ -3,8 +3,6 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
-    <groupId>com.meeting</groupId>
     <artifactId>meeting-manager</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
@@ -21,7 +19,7 @@
         <module>meeting-manager-pojo</module>
         <module>meeting-manager-application</module>
     </modules>
-    <dependencies>
+   <!-- <dependencies>
             <dependency>
                 <groupId>com.meeting</groupId>
                 <artifactId>meeting-manager-service</artifactId>
@@ -37,5 +35,5 @@
                 <artifactId>meeting-manager-mapper</artifactId>
                 <version>1.0-SNAPSHOT</version>
             </dependency>
-    </dependencies>
+    </dependencies>-->
 </project>
