--- a/meeting-manager/meeting-manager-controller/pom.xml
+++ b/meeting-manager/meeting-manager-controller/pom.xml
@@ -25,6 +25,16 @@
             <artifactId>meeting-manager-service</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.meeting</groupId>
+            <artifactId>meeting-manager-pojo</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.meeting</groupId>
+            <artifactId>meeting-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
