--- a/meeting-parent/pom.xml
+++ b/meeting-parent/pom.xml
@@ -51,6 +51,15 @@
                 <version>${junit.version}</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>1.2.38</version>
+            </dependency>
+            <dependency>
+                <groupId>log4j</groupId>
+                <artifactId>log4j</artifactId>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
